fixtures/typescript/test-double/should_fail/legitimateNames.ts
// Words containing mock/stub/fake as substrings
function processHammockData(data: unknown) {
  return data;
}
